# article

./: .gitignore  README.md  pyproject.toml  research.ipynb
algo/base_partitioner/: __init__.py  main.py  settings.py
algo/greed/: __init__.py  __main__.py  main.py
algo/helpers/: __init__.py  main.py
algo/mk/: __init__.py  __main__.py  main.py
data/layered/: dagA0.txt  dagA11.txt  dagA12.txt  dagA14.txt  dagA15.txt  dagA17.txt  dagA19.txt  dagA2.txt  dagA20.txt  dagA21.txt  dagA22.txt  dagA24.txt  dagA26.txt  dagA29.txt  dagA3.txt  dagA31.txt  dagA34.txt  dagA38.txt  dagA39.txt  dagA5.txt  dagA6.txt  dagA7.txt  dagA9.txt  dagB0.txt  dagB10.txt  dagB11.txt  dagB14.txt  dagB15.txt  dagB17.txt  dagB18.txt  dagB19.txt  dagB2.txt  dagB28.txt  dagB29.txt  dagB3.txt  dagB31.txt  dagB35.txt  dagB38.txt  dagB39.txt  dagB4.txt  (+321 more)
data/processor_sets/: 3_2x1.txt  3_2x2.txt  3_2x3.txt  3_2x4.txt  3_2x5.txt  4_1x1.txt  4_1x2.txt  4_1x3.txt  4_1x4.txt  4_1x5.txt  5_4_3_2x1.txt  5_4_3_2x2.txt  5_4_3_2x3.txt  5_4_3_2x4.txt  5_4_3_2x5.txt
data/random/: dag16.txt  dag3.txt  dag31.txt  dag36.txt  dag40.txt  dag52.txt  dag75.txt  dag96.txt  dag97.txt
data/triangle/: triadag10_0.txt  triadag10_1.txt  triadag10_2.txt  triadag10_3.txt  triadag10_4.txt  triadag10_5.txt  triadag10_6.txt  triadag10_7.txt  triadag10_8.txt  triadag10_9.txt  triadag15_0.txt  triadag15_1.txt  triadag15_2.txt  triadag15_3.txt  triadag15_4.txt  triadag15_5.txt  triadag15_6.txt  triadag15_7.txt  triadag15_8.txt  triadag15_9.txt  triadag20_0.txt  (+89 more)
scripts/: gen_script.py  research.py  task_graph_generator.py
(+2 files in other folders)
